# edwin_moveit_config

./: .setup_assistant  CMakeLists.txt  README.md  package.xml
config/: control.yaml  edwin.srdf  joint_limits.yaml  ompl_planning.yaml
include/: edwin_interface.h  st_arm.h  utils.h
launch/: demo.launch  hardware.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  planning_context.launch  real.launch  test_apriltags.launch
scripts/: april_tag_target.py  orange_pose.py
src/: edwin_arm_group_ikfast_moveit_plugin.cpp  edwin_interface.cpp  move_group_interface.cpp  st_arm.cpp  utils.cpp
